--- a/common.uk.po
+++ b/common.uk.po
@@ -17,7 +17,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-02 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Dmitro Sokhin <gamebot@ex.ua>, 2015\n"
+"Last-Translator: Ігор Андреєв <ihor@noleron.com>, 2021\n"
 "Language-Team: Ukrainian (http://www.transifex.com/team-xonotic/xonotic/"
 "language/uk/)\n"
 "Language: uk\n"
