--- a/common.de.po
+++ b/common.de.po
@@ -180,12 +180,12 @@ msgstr "^2Momentan in der ^1Aufwärmphase^2!"
 
 #: qcsrc/client/hud/panel/infomessages.qc:157
 msgid "^31^2 more player is needed for the match to start."
-msgstr ""
+msgstr "^31^2 weiterer Spieler wird für den Beginn des Spiels benötigt."
 
 #: qcsrc/client/hud/panel/infomessages.qc:159
 #, c-format
 msgid "^3%d^2 more players are needed for the match to start."
-msgstr ""
+msgstr "^3%d^2 weitere Spieler werden für den Beginn des Spiels benötigt."
 
 #: qcsrc/client/hud/panel/infomessages.qc:167
 #, c-format
@@ -527,11 +527,11 @@ msgstr "QMCMD^Teams mischen"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:873
 msgid "Server's custom quickmenu"
-msgstr ""
+msgstr "Serverdefiniertes Schnellmenü"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:875
 msgid "Waypoint editor quickmenu"
-msgstr ""
+msgstr "Wegpunkteditorschnellmenü"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:881
 msgid "QMCMD^Spectate a player"
@@ -1088,7 +1088,7 @@ msgstr "^2+%s %s"
 #: qcsrc/client/hud/panel/scoreboard.qc:2336
 #, c-format
 msgid "^5%d^7/^5%d ^7players"
-msgstr ""
+msgstr "^5%d^7/^5%d ^7Spieler"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2337 qcsrc/client/main.qc:1436
 #: qcsrc/menu/xonotic/dialog_multiplayer_join_serverinfotab.qc:43
@@ -1146,11 +1146,11 @@ msgstr "Aufwärmphase"
 
 #: qcsrc/client/hud/panel/timer.qc:131
 msgid "Warmup: no time limit"
-msgstr ""
+msgstr "Aufwärmphase: Kein Zeitlimit"
 
 #: qcsrc/client/hud/panel/timer.qc:131
 msgid "Warmup: too few players"
-msgstr ""
+msgstr "Aufwärmphase: Zu wenige Spieler"
 
 #: qcsrc/client/hud/panel/timer.qc:134
 msgid "Timeout"
@@ -1326,27 +1326,27 @@ msgstr "Spieltyp:"
 
 #: qcsrc/client/main.qc:1448
 msgid "This match supports"
-msgstr ""
+msgstr "Dieses Spiel unterstützt"
 
 #: qcsrc/client/main.qc:1450
 #, c-format
 msgid "%d players"
-msgstr ""
+msgstr "%d Spieler"
 
 #: qcsrc/client/main.qc:1452
 #, c-format
 msgid "%d to %d players"
-msgstr ""
+msgstr "%d bis %d Spieler"
 
 #: qcsrc/client/main.qc:1454
 #, c-format
 msgid "%d players maximum"
-msgstr ""
+msgstr "höchstens %d Spieler"
 
 #: qcsrc/client/main.qc:1456
 #, c-format
 msgid "%d players minimum"
-msgstr ""
+msgstr "mindestens %d Spieler"
 
 #: qcsrc/client/main.qc:1461
 msgid "Active modifications:"
@@ -1358,7 +1358,7 @@ msgstr "Besondere Spieltipps:"
 
 #: qcsrc/client/main.qc:1471
 msgid "Server's message"
-msgstr ""
+msgstr "Servernachricht"
 
 #: qcsrc/client/main.qc:1549
 #, c-format
@@ -2565,12 +2565,12 @@ msgstr "^F2Du wirst in der nächsten Runde zuschauen"
 
 #: qcsrc/common/notifications/all.inc:261
 msgid "^F2Match is restarting..."
-msgstr ""
+msgstr "^F2Spiel wird neugestartet …"
 
 #: qcsrc/common/notifications/all.inc:262
 #: qcsrc/common/notifications/all.inc:533
 msgid "^F4Countdown stopped!"
-msgstr ""
+msgstr "^F4Countdown gestoppt!"
 
 #: qcsrc/common/notifications/all.inc:264
 #, c-format
@@ -3819,7 +3819,7 @@ msgstr "^BGZiel in ^F4%s^BG zerstört!"
 #: qcsrc/common/notifications/all.inc:533
 #, c-format
 msgid "%s players are needed for this match."
-msgstr ""
+msgstr "Es werden %s Spieler für dieses Spiel benötigt."
 
 #: qcsrc/common/notifications/all.inc:534
 msgid "^BGBegin!"
@@ -4395,6 +4395,8 @@ msgid ""
 "^K1You may not join the game at this time.\n"
 "This match is limited to ^F2%s^BG players."
 msgstr ""
+"^K1Du kannst dem Spiel im Moment nicht beitreten.\n"
+"Dieses Spiel ist auf ^F2%s^BG Spieler begrenzt."
 
 #: qcsrc/common/notifications/all.inc:700
 msgid "^BGYou picked up the ball"
