--- a/common.pt_BR.po
+++ b/common.pt_BR.po
@@ -4,7 +4,7 @@
 #
 # Translators:
 # Ivan Paulos Tomé <greylica@gmail.com>, 2016
-# Jean Trindade Pereira <jean_trindade2@hotmail.com>, 2015,2018-2021
+# Jean Trindade Pereira <jean_trindade2@hotmail.com>, 2015,2018-2022
 # Mirio <opivy@hotmail.de>, 2017
 # NotThatPrivate Yes <henriqueferreira2009@gmail.com>, 2015
 # Ricardo Manuel da Cruz Coelho da Silva <ricardo.mccs@gmail.com>, 2015
@@ -18,7 +18,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-02 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: zerowhy . <anymailz@tutanota.com>, 2021\n"
+"Last-Translator: Jean Trindade Pereira <jean_trindade2@hotmail.com>, "
+"2015,2018-2022\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/team-xonotic/"
 "xonotic/language/pt_BR/)\n"
 "Language: pt_BR\n"
@@ -6073,7 +6074,7 @@ msgstr "Coreano"
 
 #: qcsrc/menu/xonotic/credits.qc:287
 msgid "Polish"
-msgstr "Polônes"
+msgstr "Polonês"
 
 #: qcsrc/menu/xonotic/credits.qc:305
 msgid "Portuguese"
