--- a/common.ru.po
+++ b/common.ru.po
@@ -12,6 +12,7 @@
 # berry <igory.ygr200@gmail.com>, 2021
 # berry <igory.ygr200@gmail.com>, 2021
 # berry <igory.ygr200@gmail.com>, 2021
+# berry <igory.ygr200@gmail.com>, 2021
 # Lord Canistra <lordcanistra@gmail.com>, 2011
 # Mirio <opivy@hotmail.de>, 2017
 # Nick S <morosophos@teichisma.info>, 2018-2019
